Changes to allow hacking the resulting hierarchy.

--- a/GenerateOrgFromJJEDS/parameters/config.properties
+++ b/GenerateOrgFromJJEDS/parameters/config.properties
@@ -1,8 +1,8 @@
 TVAusersfile=/Users/kimgalant/Documents/RoleHierarchy/TVAUsers.csv
 idfield=ID
 wwidfield=EMPLOYEENUMBER
-allowedMRCs=002960,002964,002450,004890,003872,005280
-#allowedMRCs=002960,002964
+#allowedMRCs=002960,002964,002450,004890,003872,005280
+allowedMRCs=002960,002964
 
 # users input file
 
@@ -21,6 +21,7 @@ hierarchyOutputPrefix=|---
 
 
 outputHierarchyFile=/Users/kimgalant/Documents/RoleHierarchy/0.Users_hierarchy.txt
+showNonTVAUsers=0
 outputHierarchyCSVFile=/Users/kimgalant/Documents/RoleHierarchy/0.Users_hierarchy.csv
 outputDeptFile=/Users/kimgalant/Documents/RoleHierarchy/1.Depts_hierarchy.csv
 outputUsersDataFile=/Users/kimgalant/Documents/RoleHierarchy/2.Users_update.csv
@@ -30,5 +31,7 @@ outputUserRolesFile=/Users/kimgalant/Documents/RoleHierarchy/4.userRoles_update.
 # cheat settings
 # for artificially manipulating the structure of the output role hierarchy
 
-# masterRoleId: denotes the single role which will be the parent of all other top-level roles from the output
-# SFDCMasterRole: denotes (SFDC 15 or 18 character id) the Id of the SFDC role which will  
+# masterRoleId: denotes the single role (denoted by the person's WWID) which will be the parent of all other top-level roles from the output
+# SFDCMasterRole: denotes (SFDC developername) the Id of the SFDC role which the masterRole (above) will be loaded into
+masterRoleId=85010410
+SFDCMasterRole=Med_AU_General_Manager
