Added directory handling in config file from main branch

--- a/GenerateOrgFromJJEDS/parameters/config.properties
+++ b/GenerateOrgFromJJEDS/parameters/config.properties
@@ -1,32 +1,44 @@
-TVAusersfile=/Users/kimgalant/Documents/RoleHierarchy/TVAUsers.csv
+# base directory
+
+baseDirectory=/Users/kimgalant/Documents/RoleHierarchy/roles
+
+# input directory/output directory
+# anything here is appended to baseDirectory before the app looks for its files
+
+inputDirectory=input
+outputDirectory=output
+
+
+TVAusersfile=TVAUsers.csv
 idfield=ID
 wwidfield=EMPLOYEENUMBER
+rolefield=USERROLEID
 #allowedMRCs=002960,002964,002450,004890,003872,005280
-allowedMRCs=002960,002964
+allowedMRCs=002960,002964,002970
 
 # users input file
 
-inputUsersfile=/Users/kimgalant/Documents/RoleHierarchy/AllUsers.csv
+inputUsersfile=AllUsers.csv
 inputWWIDField=WWID
 inputDeptName=Department Description
 inputDeptId=Department Number
 inputName=Formatted Name
 inputEmail=Email Address
 inputTitle=Title
-inputSponsorEmail=Sponsor Email
 inputSupervisor=Supervisor
+inputSponsorEmail=Sponsor Email
 inputMRC=Management Reporting Company
 
 hierarchyOutputPrefix=|---
 
 
-outputHierarchyFile=/Users/kimgalant/Documents/RoleHierarchy/0.Users_hierarchy.txt
+outputHierarchyFile=0.Users_hierarchy.txt
 showNonTVAUsers=0
-outputHierarchyCSVFile=/Users/kimgalant/Documents/RoleHierarchy/0.Users_hierarchy.csv
-outputDeptFile=/Users/kimgalant/Documents/RoleHierarchy/1.Depts_hierarchy.csv
-outputUsersDataFile=/Users/kimgalant/Documents/RoleHierarchy/2.Users_update.csv
-outputRolesFile=/Users/kimgalant/Documents/RoleHierarchy/3.Roles_update.csv
-outputUserRolesFile=/Users/kimgalant/Documents/RoleHierarchy/4.userRoles_update.csv
+outputHierarchyCSVFile=0.Users_hierarchy.csv
+outputDeptFile=1.Depts_hierarchy.csv
+outputUsersDataFile=2.Users_update.csv
+outputRolesFile=3.Roles_update.csv
+outputUserRolesFile=4.userRoles_update.csv
 
 # cheat settings
 # for artificially manipulating the structure of the output role hierarchy
@@ -35,3 +47,25 @@ outputUserRolesFile=/Users/kimgalant/Documents/RoleHierarchy/4.userRoles_update.
 # SFDCMasterRole: denotes (SFDC developername) the Id of the SFDC role which the masterRole (above) will be loaded into
 masterRoleId=85010410
 SFDCMasterRole=Med_AU_General_Manager
+
+# role input settings
+
+roleFile=ProdRoles.csv
+roleId=ID
+roleName=NAME
+roleParentId=PARENTROLEID
+roleDescription=ROLLUPDESCRIPTION
+roleDevName=DEVELOPERNAME
+
+unusedRolesFile=UnusedProdRoles.csv
+
+# OBS Dept input settings
+
+OBSFile=OBS_dept__c.csv
+unusedOBSFile=UnusedOBS_dept__c.csv
+
+OBSId=ID
+OBSManager=MANAGER_SOURCE__C
+OBSName=NAME_SOURCE__C
+OBSParent=PARENT_ID_SOURCE__C
+OBSDeptId=DEPT_ID_SOURCE__C
